Scaling the "redo-last" panel will not adjust its boundaries, #77382

Closed
opened 2020-06-04 18:10:30 +02:00 by Kent Davis · 12 comments

System Information
Operating system: Darwin-19.6.0-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro 575 OpenGL Engine ATI Technologies Inc. 4.1 ATI-3.10.6

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-03 18:45, hash: b94ab93dfb
Worked: (newest version of Blender that worked as expected)

Short description of error
When scaling the "redo-last" panel, the limits are not adjusted, the content is cut and scroll bars are added.
redo-pane-scale.png

Exact steps for others to reproduce the error
MacOS 10.15.5 Catalina.
Magicmouse scroll up/down.

  1. Press G key (not matter r, e, g, s, x, y, z and etc) to appear the "redo-last" panel on below and left side.
  2. Press the Command + Magicmouse scroll up and down make scale enlarge and small.
    It will not fit. See picture and youtube.
    Screen Shot 2020-06-04 at 9.02.12 AM.png
    https://youtu.be/olRSMeOYwcE
**System Information** Operating system: Darwin-19.6.0-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro 575 OpenGL Engine ATI Technologies Inc. 4.1 ATI-3.10.6 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-03 18:45, hash: `b94ab93dfb` Worked: (newest version of Blender that worked as expected) **Short description of error** When scaling the "redo-last" panel, the limits are not adjusted, the content is cut and scroll bars are added. ![redo-pane-scale.png](https://archive.blender.org/developer/F8813073/redo-pane-scale.png) **Exact steps for others to reproduce the error** MacOS 10.15.5 Catalina. Magicmouse scroll up/down. 1. Press G key (not matter r, e, g, s, x, y, z and etc) to appear the "redo-last" panel on below and left side. 2. Press the Command + Magicmouse scroll up and down make scale enlarge and small. It will not fit. See picture and youtube. ![Screen Shot 2020-06-04 at 9.02.12 AM.png](https://archive.blender.org/developer/F8577016/Screen_Shot_2020-06-04_at_9.02.12_AM.png) https://youtu.be/olRSMeOYwcE
Author

Added subscriber: @Kent-Davis

Added subscriber: @Kent-Davis

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Apparently there is a conflict with the Zoom of the panels and the zoom of the 3d view.
I don't know how this "magicmouse" works, so I can't say if this can be intentional in any way.

Apparently there is a conflict with the Zoom of the panels and the zoom of the 3d view. I don't know how this "magicmouse" works, so I can't say if this can be intentional in any way.
Author

Ask some one use Macintosh. Not for Windows.

Ask some one use Macintosh. Not for Windows.

Added subscriber: @jenkm

Added subscriber: @jenkm

Just to clarify:

We can scale the panel by using Ctrl-MMB.

Scaling the "redo-last" panel will not adjust its boundaries,
the content is cropped and scrollbars are added.

redo-pane-scale.png

I will also add that the scale is not saved,
and is reset every time the next operator is called.

Just to clarify: We can scale the panel by using Ctrl-MMB. Scaling the "redo-last" panel will not adjust its boundaries, the **content is cropped** and scrollbars are added. ![redo-pane-scale.png](https://archive.blender.org/developer/F8813073/redo-pane-scale.png) I will also add that the scale is not saved, and is reset every time the next operator is called.

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Thanks for the clarification @jenkm, I can confirm in Windows too.

Thanks for the clarification @jenkm, I can confirm in Windows too.
Germano Cavalcante changed title from Zoom in and out push the Command key while magicmouse scroll to Scaling the "redo-last" panel will not adjust its boundaries, 2020-08-27 19:17:28 +02:00

Added subscriber: @brecht

Added subscriber: @brecht

Zooming should just not be supported in this panel, just like it is not supported in headers.

Zooming should just not be supported in this panel, just like it is not supported in headers.

This issue was referenced by e74a24f0bb

This issue was referenced by e74a24f0bbf386b680c510a720fbc1da8292fc4c

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2020-08-27 19:53:20 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77382
No description provided.