Fix T77382: zooming into adjust last operation panel clips contents

This panel should not have zoom functionality at all, just like headers and
many other regions don't have it either.